fix: increase dial code country name visibility

--- a/src/components/DialCodeSelect.module.css
+++ b/src/components/DialCodeSelect.module.css
@@ -43,8 +43,8 @@
 }
 
 .country {
-  font-size: 11px;
-  color: var(--td);
+  font-size: 12px;
+  color: var(--tm);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
